envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 3000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
             "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          upgrade_configs:
          - upgrade_type: websocket
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match: { prefix: "/graphql" }
                route: { cluster: api }
              - match: { prefix: "/" }
                route: { cluster: ui }
  clusters:
  - name: ui
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: ui
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ui
                port_value: 8080
  - name: api
    connect_timeout: 0.40s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: api
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: api
                port_value: 4000
  - name: arangodb
    connect_timeout: 0.40s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: arangodb
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: arangodb
                port_value: 8529

layered_runtime:
  layers:
    - name: static_layer_0
      static_layer:
        envoy:
          resource_limits:
            listener:
              example_listener_name:
                connection_limit: 10000
        overload:
          global_downstream_max_connections: 50000

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 3001
